--- a/packages/ant-design/package.json
+++ b/packages/ant-design/package.json
@@ -48,13 +48,13 @@
     "api-collection": "antd-tools run api-collection",
     "argos": "node ./scripts/argos-upload.js",
     "authors": "node ./scripts/generate-authors",
-    "build": "npm run compile && NODE_OPTIONS='--max-old-space-size=4096' npm run dist",
+    "build": "npm run compile &&cross-env NODE_OPTIONS='--max-old-space-size=4096' npm run dist",
     "bundlesize": "bundlesize",
     "changelog": "node ./scripts/print-changelog",
     "check-commit": "node ./scripts/check-commit",
     "check-ts-demo": "node ./scripts/check-ts-demo",
-    "clean": "antd-tools run clean && rm -rf es lib coverage dist report.html",
-    "clean-lockfiles": "rm -rf package-lock.json yarn.lock",
+    "clean": "antd-tools run clean && rimraf -rf es lib coverage dist report.html",
+    "clean-lockfiles": "rimraf -rf package-lock.json yarn.lock",
     "precompile": "npm run version",
     "compile": "npm run clean && antd-tools run compile",
     "predeploy": "antd-tools run clean && npm run site && cp CNAME _site && npm run site:test",
