--- a/packages/tools-ui/package.json
+++ b/packages/tools-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tools-ui",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "build": "node scripts/build.js",
     "start": "node scripts/start.js",
@@ -110,6 +110,7 @@
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "i-antd": "^4.23.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
@@ -121,10 +122,10 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
-    "react": "^18.2.0",
+    "react": "^17.0.0",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.0",
     "react-refresh": "^0.11.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
