--- a/packages/tools-ui/package.json
+++ b/packages/tools-ui/package.json
@@ -116,6 +116,7 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "monaco-editor": "^0.34.1",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
@@ -144,7 +145,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.12",
     "copy-webpack-plugin": "^11.0.0",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "node-sass": "^7.0.3",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   }
