--- a/packages/tools-ui/package.json
+++ b/packages/tools-ui/package.json
@@ -85,6 +85,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
@@ -116,6 +117,7 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "mobx": "^6.6.2",
     "monaco-editor": "^0.34.1",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -145,6 +147,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.12",
     "copy-webpack-plugin": "^11.0.0",
+    "mobx-react": "^7.5.3",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "node-sass": "^7.0.3",
