--- a/packages/tools-ui/package.json
+++ b/packages/tools-ui/package.json
@@ -125,6 +125,7 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
+    "re-resizable": "^6.9.9",
     "react": "^17.0.0",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
