--- a/packages/tools-ui/package.json
+++ b/packages/tools-ui/package.json
@@ -147,6 +147,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "classnames": "^2.3.2",
     "copy-webpack-plugin": "^11.0.0",
     "mobx-react": "^7.5.3",
     "monaco-editor-webpack-plugin": "^7.0.1",
